sketchy: fix breadcrumb and tab active color in dark mode #1303

--- a/docs/5/sketchy/_variables.scss
+++ b/docs/5/sketchy/_variables.scss
@@ -87,7 +87,6 @@ $dropdown-link-hover-bg:            $gray-800 !default;
 
 $nav-tabs-border-color:             $gray-800 !default;
 $nav-tabs-link-hover-border-color:  $gray-800 !default;
-$nav-tabs-link-active-color:        $gray-800 !default;
 $nav-tabs-link-active-border-color: $gray-800 !default;
 
 // Navbar
@@ -145,7 +144,6 @@ $list-group-action-color:           $gray-800 !default;
 $breadcrumb-padding-y:              .375rem !default;
 $breadcrumb-padding-x:              .75rem !default;
 $breadcrumb-divider-color:          $gray-800 !default;
-$breadcrumb-active-color:           $gray-800 !default;
 $breadcrumb-border-radius:          .25rem !default;
 
 // Close
