--- a/docs/5/sketchy/bootstrap.rtl.css
+++ b/docs/5/sketchy/bootstrap.rtl.css
@@ -3873,7 +3873,7 @@ textarea.form-control-lg {
   --bs-nav-tabs-border-color: #333;
   --bs-nav-tabs-border-radius: var(--bs-border-radius);
   --bs-nav-tabs-link-hover-border-color: #333;
-  --bs-nav-tabs-link-active-color: #333;
+  --bs-nav-tabs-link-active-color: var(--bs-emphasis-color);
   --bs-nav-tabs-link-active-bg: var(--bs-body-bg);
   --bs-nav-tabs-link-active-border-color: #333;
   border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
@@ -4720,7 +4720,7 @@ textarea.form-control-lg {
   --bs-breadcrumb-border-radius: 0.25rem;
   --bs-breadcrumb-divider-color: #333;
   --bs-breadcrumb-item-padding-x: 0.5rem;
-  --bs-breadcrumb-item-active-color: #333;
+  --bs-breadcrumb-item-active-color: var(--bs-secondary-color);
   display: flex;
   flex-wrap: wrap;
   padding: var(--bs-breadcrumb-padding-y) var(--bs-breadcrumb-padding-x);
